  * Added MemberInfo extension method CreateMemberAccessLambda()
  * Added Clear(), Reset(), AddCallSite(), and AddExtendedCallSite() to Breadcrumbs
  * Added ReadOnlyCollection, ReadOnlyList, and ReadOnlyDictionary implementations that are  truly immutable
  * Updated Collection/List/Dictionary EmptyReadOnly<T>() so the underlying collection is truly immutable

AllOverIt.Assertion
  * Removed methods that asserted an enumerable was a concrete collection type and instead updated .NET Core 3.1
    versions to check for different collection types before falling back to the default Any() Linq method.

AllOverIt.DependencyInjection
  * Updated to reference Microsoft.Extensions.DependencyInjection.Abstractions instead of Microsoft.Extensions.DependencyInjection

AllOverIt.Pagination
  * New package to provide keyset based pagination for any IQueryable, including EF queries

AllOverIt.EntityFrameworkCore.Pagination
  * New package to provide keyset based pagination extensions for any EF

AllOverIt.Fixture
AllOverIt.Fixture.FakeItEasy
  * Updated to FluentAssertions v6.7.0


24 May 2022
Version 5.6.1
======================================================================================================================
AllOverIt.Fixture
  * Updated FixtureBase to customize generating double values


12 May 2022
Version 5.6.0
======================================================================================================================
AllOverIt
  * Added NotAny() as an IEnumerable extension
  * Minor performance improvement to ObjectPropertySerializer.SerializeToDictionary() when the input is already a
    dictionary<string, string>.
  * ObjectPropertySerializer now supports serialization of a root-level collection of primitives (not a property)
    when value collation is enabled ("[]" is used as the dictionary key).
  * Added a Breadcrumbs collection that can be used to capture diagnostic/trace information. Can be configured for
    multi-thread access if required.